# office-docs-to-md-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.example.yml  office-docs-to-md-sync.spec  pyproject.toml  run.py
.github/workflows/: ci.yml  monthly-image.yml  release.yml
app/: __init__.py  converter.py  git_ops.py  main.py  models.py  storage.py  sync_engine.py  sync_state.py  validation.py
app/static/: app.js  index.html  styles.css
markitdown/: __init__.py
scripts/: install-systemd.sh  install-windows-service.ps1
tests/: test_api.py  test_converter.py  test_git_ops.py  test_storage.py  test_sync_engine.py
